# pico-type

./: .gitignore  LICENSE  MODEL_CARD.md  README.md  export_meta.json  gradio_app.py  hf_org_card.md  picotype_base.onnx  picotype_small.onnx  picotype_tiny.onnx  pyproject.toml  walkthrough.md
.github/workflows/: ci.yml
.opencode/plans/: hf_org_card.md
checkpoints/: eval_results.json  picotype_base.onnx  picotype_base_static.onnx  picotype_pro.onnx  picotype_small.onnx  picotype_tiny.onnx  real_samples.pkl  real_world_eval.json  train_config.json
crates/picotype/: Cargo.toml
crates/picotype-mcp/: Cargo.toml
crates/picotype-mcp/src/: main.rs
crates/picotype/src/: main.rs
docs/: PLAN.md  demo.html  index.html
extensions/chrome/: background.js  content.js  manifest.json  popup.html  popup.js  server.py
model/pico_type/: __init__.py  arch.py  cli.py  data.py  distill.py  eval.py  export.py  fetch_real.py  finetune_real.py  focus10_sweep.py  focus2_train.py  focus3_train.py  focus4_train.py  focus5_train.py  focus6_code_lang.py  focus6_multihead.py  focus6_targeted.py  focus7_french.py  focus8_long.py  focus9_ultra.py  focus_train.py  labels.py  mcp_server.py  pipeline.py  realdata.py  train.py  train_real.py
paper/: main.tex
spaces/: app.py  requirements.txt
tests/: test_smoke.py
