[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pico-type"
version = "0.1.3"
description = "A tiny byte-level multi-head content classifier"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
dependencies = [
    "torch>=2.0",
    "numpy<2",
    "safetensors",
    "pyyaml",
]
urls.Homepage = "https://github.com/eulogik/pico-type"
urls.Repository = "https://github.com/eulogik/pico-type"

[project.scripts]
picotype = "model.pico_type.cli:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]
distill = [
    "transformers",
]
export = [
    "onnx",
    "onnxruntime",
    "onnxscript",
]

[tool.setuptools.packages.find]
include = ["model*"]

[tool.ruff]
line-length = 120
target-version = "py311"
