[package]
name = "picotype-mcp"
version = "0.1.0"
edition = "2024"
description = "pico-type MCP server (stdio transport) for Claude/Cursor/VSCode"

[[bin]]
name = "picotype-mcp"
path = "src/main.rs"

[dependencies]
ort = "2.0.0-rc.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ndarray = "0.16"
