[package]
name = "picotype"
version = "0.1.0"
edition = "2024"
description = "A tiny byte-level multi-head content classifier CLI"

[[bin]]
name = "picotype"
path = "src/main.rs"

[dependencies]
ort = "2.0.0-rc.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
ndarray = "0.16"
atty = "0.2"
